master/templates/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress  
metadata:  
  name: master-ingress 
  annotations:
    # cert-manager.io/issuer: letsencrypt-prod
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
 
spec:
  # tls:
  #   - hosts:
  #     - cat.terrestrialplatform.link
  #     - nodered.terrestrialplatform.link
  #     - grafana.terrestrialplatform.link
  #     secretName: letsencrypt-prod
  rules:
    - host: master.terrestrialplatform.link
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
   
            backend:
   
              service:
   
                name: master
   
                port:
   
                  number: 8088
